--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -64,6 +64,7 @@
 \usepackage{wasysym}
 \usepackage{xypic}
 \usepackage{listings}
+\usepackage{braket}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -304,7 +305,7 @@
  \item $(\Q\setminus\{0\}, \cdot)$
  \item $\Z/_{n\Z}$ der Restklassenring bzw. die Restklassengruppe modulo $n$
   mit der Addition.
- \item $(\Z/_{n\Z})^{\times}=\{a+n\Z\colon\ggt(a,n)=1\}$ prime Restklassengruppe
+ \item $(\Z/_{n\Z})^{\times}=\Set{a+n\Z | \ggt(a,n)=1}$ prime Restklassengruppe
   modulo $n$ mit der Multiplikation
 \end{enumerate}
 
@@ -411,10 +412,10 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \chapter{Halbgruppen}
 
 \begin{defini}[Monade, Magma]
-  Sei $M$ eine Menge. Darauf legen wir eine \highl{Verknüpfung} $M\times
-  M\rightarrow M$ mit $(a,b)\mapsto a\times b$ (alternativ auch $a+b, a\cdot
-  b$ oder $ab$) fest. Dann ist $(M,\times)$ eine \highl{Monade} oder auch
-  \highl{Magma}.
+  Sei $M$ eine Menge. Darauf legen wir eine \highl{Verknüpfung}
+  $M\times M\rightarrow M$ mit $(a,b)\mapsto a\times b$
+  fest.\footnote{alternativ auch $a+b, a\cdot b$ oder $ab$} Dann
+  bezeichnet man $(M,\times)$ als \highl{Monade} oder \highl{Magma}.
 \end{defini}
 
 \begin{bsp}
@@ -473,8 +474,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{bsp}
   \begin{enumerate}
    \item $(\N,+)$ Halbgruppe, $(\N_{0}, +)$ Monoid
-   \item $X$ Menge $\Rightarrow\Abb(X)$ Monoid, neutrales Element
-    $\id_{X}\colon X\rightarrow X, x\mapsto x$ identische Abbildung
+   \item Sei $X$ eine Menge. Dann ist $\Abb(X)$ ein Monoid mit dem
+     neutralen Element $\id_{X}\colon X\rightarrow X, x\mapsto x$
+     (\highl[Abbildung!identische]{identische Abbildung}).
    \item Sei $A\neq\emptyset$ eine Menge (\highl{Alphabet}). Die Elemente von
     $A$ heißen \highl{Buchstaben}. Ein \highl{Wort} über $A$ ist die endliche
     Folge $w=(a_{1},\dotsc, a_{m})=\colon a_{1}\cdot\dotso \cdot a_{m}$. Die
@@ -482,7 +484,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
     $W\coloneq\{w\colon w\text{ Wort über } A\}$. Das
     \highl[Wort!leeres]{leere Wort} ist $\epsilon=()\notin W$. Dann können wir
     das \highl[Monoid!freies]{freie Monoid} über $A$ mit $W_{0}\coloneq
-    W\cup\{\epsilon\}$ definieren.
+    W\cup\{\epsilon\}$ definieren.\todo{Was ist hier die Abbildung?}
   \end{enumerate}
 \end{bsp}
 
@@ -495,12 +497,12 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{defini}[Invertierbarkeit]
   Sei $M$ ein Monoid und $a\in M$. Das Element $a$ heißt genau dann
   \highl{rechtsinvertierbar} (oder \highl{linksinvertierbar}), wenn ein
-  Element $b\in M$ mit $ab=1$ ($ba=1$) existiert. Man bezeichnet $b$ als das
+  Element $b\in M$ mit $ab=1$ (oder $ba=1$) existiert. Man bezeichnet $b$ als das
   \highl{Rechtsinverse} oder \highl{Linksinverse} zu $a$.
 \end{defini}
 
 \begin{bemerk}
-  Sei $b\in M$ rechtsinvers und $c\in M$ linksinvers zu $a$. Dann folgt,
+  Sei $b\in M$ rechtsinvers und $c\in M$ linksinvers zu $a\in M$. Dann folgt,
   $b=1b=(ca)b= c(ab)= c1=c$. Das Element $a$ heißt dann \highl{invertierbar}
   und $b$ \highl{Inverses} zu $a$. Wir schreiben $b=\colon a^{-1}$ oder bei
   der Addition $b=\colon-a$. Es gilt: $a^{-1}a=1=aa^{-1}$. Damit ist auch
@@ -512,7 +514,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{bsp}
   Sei $K$ ein Körper und $n$ eine natürliche Zahl. Dann folgt für das
   Monoid bezüglich der Matrixmultiplikation $K^{n\times n}$ mit der
-  Einheitsmatrix als natürliches Element, dass eine Matrix $A\in
+  Einheitsmatrix als neutrales Element, dass eine Matrix $A\in
   K^{n\times n}$ invertierbar ist, wenn $A$ eine reguläre Matrix ist,
   d.\,h. die Determinante von $A$ ist ungleich $0$. In der linearen Algebra
   impliziert die Linksinvertierbarkeit auch die
@@ -570,7 +572,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{enumerate}
    \item Seien $L,M,N$ Monaden und $f\in\Hom(L,M), g\in\Hom(M,N)$. Dann ist
     $g\circ f\in\Hom(L,N)$ ein Homomorphismus. Denn $(g\circ f)(ab)= g(f(ab))=
-    g(f(a)f(b))= g(f(a))g(f(b))= (g\circ f)(a)\cdot(g\circ f)(b)$ für $a,b\in
+    g(f(a)\cdot f(b))= g(f(a))\cdot g(f(b))= (g\circ f)(a)\cdot(g\circ f)(b)$ für $a,b\in
     L$.
    \item Sei $f$ ein Isomorphismus. Dann ist $f^{-1}$ ebenfalls ein
     Isomorphismus. Denn $f^{-1}(xy)=f^{-1}(f(f^{-1}(x))\cdot f(f^{-1}(y)))=
@@ -650,7 +652,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 	 \end{pmatrix}
     \end{gather*}
    \item Sei $K$ ein Körper und $n\in\N$. Dann ist $U(K^{n\times n},
-    \cdot)=\{A\in K^{n\times n}\colon\det A\neq0\}=\colon\GL(n,K)$.
+    \cdot)=\Set{A\in K^{n\times n} | \det A\neq0}=\colon\GL(n,K)$.
    \item Für jede nichtleere Familie $(G_{i})_{i\in I}$ von Gruppen $G_{i}$.
     Dann ist auch das \highl[Produkt!direktes]{direkte Produkt} $\prod_{i\in
     I} G_{i}= \bigtimes_{i\in I}G_{i}= \{(g_{i})_{i\in I}\colon g_{i}\in G_{i}
@@ -752,7 +754,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 %def 2.5
 \begin{defini}
   Für Teilmengen $X,Y$ einer Gruppe $G$ setzt man: $XY\coloneq\{xy\colon x\in
-  X,y\in Y\}$ und $X^{-1}\coloneq\{x^{-1}\colon x\in X\}$.
+  X,y\in Y\}$ und $X^{-1}\coloneq\Set{x^{-1} |  x\in X}$.
 \end{defini}
 
 \begin{bemerk}\label{bem:32}
@@ -821,7 +823,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 % Vorlesung vom 2009-04-21
 \begin{bsp}\label{bsp:26}
   Ist $X=\{x\}$, so heißt $\langle x\rangle=\langle X\rangle=
-  \{x^{n}\colon n\in\Z\}$ die von $x$  erzeugte
+  \Set{x^{n} |  n\in\Z}$ die von $x$  erzeugte
   \highl[Untergruppe!zyklische]{zyklische Untergruppe} von $G$. Allgemein
   heißt jede Menge $E$ mit $\langle E\rangle=G$ ein \highl{Erzeugendensystem}
   von $G$. Hat die Gruppe $G$ ein endliches Erzeugendensystem, so heißt $G$
@@ -833,9 +835,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{satz}\label{satz:27}
   Für jeden Gruppenhomomorphismus $f\colon G\rightarrow H$ gilt:
   \begin{enumerate}
-   \item Wenn $U\leq G$, dann ist $f(U)=\{f(u)\colon u\in U\}\leq H$.
+   \item Wenn $U\leq G$, dann ist $f(U)=\Set{f(u) |  u\in U}\leq H$.
     Insbesondere ist $\Bld(f)\coloneq f(G)\leq H$.
-   \item $V\leq H\Rightarrow f^{-1}(V)= \{g\in G\colon f(g)\in V\}\leq G$.
+   \item $V\leq H\Rightarrow f^{-1}(V)= \Set{g\in G |  f(g)\in V}\leq G$.
     Insbesondere ist $\ker(f)\coloneq f^{-1}(\{1_{H}\})\leq G$.
    \item $U\leq G\Rightarrow f^{-1}(f(U))= U(\ker f)= (\ker f)U$ oder $V\leq
     H\Rightarrow f(f^{-1}(V))= V\cap\Bld f$.
@@ -889,7 +891,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{enumerate}
    \item Sei $K$ ein Körper und $n$ eine natürliche Zahl. Dann ist die
      spezielle lineare Gruppe $\SL(n,K)=
-    \{A\in\GL(n,K)\colon\det A=1\}= \ker(\det\colon\GL(n,K)\rightarrow
+    \Set{A\in\GL(n,K) | \det A=1}= \ker(\det\colon\GL(n,K)\rightarrow
     K\setminus\{0\})$.
    \item Für jedes Element $a$ einer Gruppe $G$ ist $\ad_{a}\colon G\rightarrow
     G$ mit $x\mapsto axa^{-1}$ ein Homomorphismus. Denn für $x,y\in G$ gilt:
@@ -902,7 +904,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
     Die Abbildung $\ad\colon G\rightarrow\Aut G$ mit $a\mapsto\ad_{a}$ ist ein
     Homomorphismus. Denn für $a,b,x\in G$ ist $(\ad_{a}\circ\ad_{b})(x)=
     a(bxb^{-1})a^{-1}= (ab)x(ab)^{-1}= \ad_{ab}x$. Nach \autoref{satz:27} ist
-    $\Bld(\ad)= \{\ad_{a}\colon a\in G\}\leq\Aut G$. Man nennt
+    $\Bld(\ad)= \Set{\ad_{a} |  a\in G}\leq\Aut G$. Man nennt
     $\Inn(G)\coloneq\Bld(\ad)$ die \highl[Automorphismengruppe!innere]{innere
     Automorphismengruppe} von $G$. Analog ist $\ker(\ad)= \{a\in
     G\colon\ad=\id_{G}\}= \{a\in G\colon axa^{-1}=x\,\forall x\in G\}= \{a\in
@@ -951,10 +953,10 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 \begin{bemerk}
   Für Elemente $a,b\in G$ gilt: $a\equiv_{l}b\pmod{H}\Leftrightarrow
-  a^{-1}b\in H\Leftrightarrow b\in aH\coloneq\{ah\colon h\in H\}$. Daher ist
+  a^{-1}b\in H\Leftrightarrow b\in aH\coloneq\Set{ah |  h\in H}$. Daher ist
   die Äquivalenzklasse von einem Element $a\in G$ bezüglich
   $\equiv_{l}\pmod{H}$ die \highl{Linksnebenklasse} von $a$ modulo $H$. Wir
-  setzen $G/H\coloneq\{aH\colon a\in G\}$. Für $a\in G$ ist $H\rightarrow aH$
+  setzen $G/H\coloneq\Set{aH |  a\in G}$. Für $a\in G$ ist $H\rightarrow aH$
   mit $a\mapsto ah$ bijektiv. Die Surjektivität ist klar und $ah=ah'$ folgt,
   $h=a^{-1}ah=a^{-1}ah'=h'$. Insbesondere ist $\abs{aH}=\abs{H}$.
 \end{bemerk}
@@ -966,7 +968,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Man schreibt $a\equiv_{r}b\pmod{H}$. Es gilt ein zu \autoref{satz:31}
   analoges Ergebnis. Die Äquivalenzklasse von $a$ bezüglich
   $\equiv_{r}\pmod{H}$ ist die \highl{Rechtsnebenklasse} $Ha$ von $a$ nach
-  $H$. Wir setzen $H\setminus G\coloneq \{Ha\colon a\in G\}$. Für $a\in G$
+  $H$. Wir setzen $H\setminus G\coloneq \Set{Ha |  a\in G}$. Für $a\in G$
   ist wieder $\abs{Ha}= \abs{H}$.
 
   Für $R=Ha\in H\setminus G$ ist $R^{-1}= a^{-1}H^{-1}= a^{-1}H\in G/H$.
@@ -1017,7 +1019,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{defini}
 
 \begin{bemerk}
-  Nach dem \autoref{bsp:26} ist $\langle a\rangle=\{a^{n}\colon n\in\Z\}$.
+  Nach dem \autoref{bsp:26} ist $\langle a\rangle=\Set{a^{n} |  n\in\Z}$.
   \begin{enumerate}[1.\,F{a}ll]
    \item Alle $a^{n}$ sind verschieden. Dann ist $\abs{\langle
     a\rangle}=\infty$.
@@ -1118,7 +1120,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Für jedes Element $a\in G$ ist die Äquivalenzklasse von $a$ bezüglich der
   Äquivalenzrelation die \highl{Doppelnebenklasse} $HaK\coloneq\{hak\colon
   h\in H, k\in K\}$ von $a$ nach $H$ und $K$. Man setzt: $H\setminus
-  G/K\coloneq\{HaK\colon a\in G\}$. Es gilt, $H\setminus G=H\setminus G/1$ und
+  G/K\coloneq\Set{HaK |  a\in G}$. Es gilt, $H\setminus G=H\setminus G/1$ und
   $G/K=1\setminus G/K$. Im Allgemeinen ist die Anzahl der Elemente einer
   Doppelnebenklasse \emph{kein} Teiler der Gruppenordnung.
 \end{bemerk}
@@ -1380,7 +1382,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
     $N\trianglelefteq NH$. Die Einschränkung $g\colon H\rightarrow H/N$ von
     $f$ ist ein Homomorphismus mit dem Kern $H\cap\ker f=H\cap N$. Daher ist
     $H\cap N\trianglelefteq H$. Aus dem \autoref{satz:42} folgt: $H/(H\cap N)=
-    H/\ker g\cong\Bld g=\{aN\colon a\in H\}= \{anN\colon a\in H, n\in N\}=
+    H/\ker g\cong\Bld g=\Set{aN | a\in H}= \Set{anN |  a\in H, n\in N}=
     HN/N$.
   \end{proof}
 \end{satz}
@@ -2542,7 +2544,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Sei $A$ eine freie abelsche Gruppe mit Basen $a_{1},\dotsc, a_{k}$ und
   $b_{1},\dotsc, b_{l}$. Dann ist $k$ gleich $l$.
   \begin{proof}
-    Offenbar ist $2A\coloneq\{2a\colon a\in A\}\leq A$ und $A/2A$ wird zu
+    Offenbar ist $2A\coloneq\Set{2a |  a\in A}\leq A$ und $A/2A$ wird zu
     einem Vektorraum über dem Körper $K\coloneq\Z/2\Z$ mit
     $(z+2\Z)(a+2a)\coloneq za+2A$ mit $z\in\Z$ und $a\in A$. Diese Definition
     ist wohldefiniert, wie man schnell nachrechnet. Wir behaupten, dass
@@ -3432,7 +3434,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 \begin{bemerk}
   Für $\alpha\in\Omega$ ist die \highl{Bahn}
-  $\Orb_{G}(\alpha)\coloneq\{\vorhoch{g}\alpha\colon g\in G\}$ die Äquivalenzklasse
+  $\Orb_{G}(\alpha)\coloneq\Set{\vorhoch{g}\alpha |  g\in G}$ die Äquivalenzklasse
   von $\alpha$ bezüglich $\sim$. Man bezeichnet mit $\abs{\Orb_{G}(\alpha)}$
   die \highl{Länge} der Bahn von $\alpha$. Aus allgemeinen Tatsachen über
   Äquivalenzrelationen folgt, dass $\Omega$ die disjunkte Vereinigung der
@@ -3693,7 +3695,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{proof}
     \begin{itemize}
      \item[(1)$\Rightarrow$(2)] Sei die erste Aussage  erfüllt und
-      $\CL\coloneq\{\vorhoch{g}\Delta\colon g\in G\}$ und $\delta\in\Delta$. Für ein
+      $\CL\coloneq\Set{\vorhoch{g}\Delta |  g\in G}$ und $\delta\in\Delta$. Für ein
       $\omega\in\Omega$ existiert dann ein $g\in G$ mit
       $\omega=\vorhoch{g}\delta\in\vorhoch{g}\Delta$. Also ist
       $\Omega=\bigcup_{\Lambda\in\CL} \Lambda$. Sind $g,h\in G$ mit
@@ -3815,7 +3817,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{bemerk}
   Jede Gruppe $G$ operiert auf sich selbst durch \highl{Konjugation}:
   $\vorhoch{g}x=gxg^{-1}$ für alle $g,x\in G$. Dabei heißt $\Orb_{G}(x)=
-  \{gxg^{-1}\colon g\in G\}$ \highl{Konjugationsklasse} von $x$ in
+  \Set{gxg^{-1} |  g\in G}$ \highl{Konjugationsklasse} von $x$ in
   $G$. Liegen zwei Elemente $x,y\in G$ in der gleichen
   Konjugationsklasse, d.\,h.  existiert ein $g\in G$ mit $y=gxg^{-1}$,
   dann heißen $x$ und $y$ \highl{konjugiert} in $G$. Wir schreiben
@@ -3922,8 +3924,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
 %bem 11.4
 \begin{bemerk}
   Jede Gruppe $G$ operiert auf $\FP(G)$ (Potenzmenge von $G$) durch
-  \highl{Konjugation}: $\vorhoch{g}X\coloneq gXg^{-1}=\{gxg^{-1}\colon x\in X\}$.
-  Dabei heißt die Bahn $\Orb_{G}(X)= \{gXg^{-1}\colon g\in G\}$
+  \highl{Konjugation}: $\vorhoch{g}X\coloneq gXg^{-1}=\Set{gxg^{-1} |  x\in X}$.
+  Dabei heißt die Bahn $\Orb_{G}(X)= \Set{gXg^{-1} |  g\in G}$
   \highl{Konjugationsklasse} von $X$ in $G$. Liegen zwei Teilmengen
   $X,Y\in\FP(G)$ in der gleichen Konjugationsklasse, d.\,h. existiert ein
   $g\in G$ mit $Y=gXg^{-1}$, so heißen die $X,Y$ in $G$ \highl{konjugiert}.
@@ -4057,7 +4059,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 \begin{satz}
   Sei $k_{1},\dotsc, k_{l}$ eine Partition von $n$ und
-  $m_{i}\coloneq\abs{\{j\colon kj=i\}}$ für $i=1,\dotsc,n$. Unter den Zahlen
+  $m_{i}\coloneq\abs{\Set{j |  kj=i}}$ für $i=1,\dotsc,n$. Unter den Zahlen
   $k_{1},\dotsc, k_{l}$ treten also $m_{1}$~Einsen, $m_{2}$~Zweien usw.\,auf.
   Dann hat die Konjugationsklasse der Elemente vom Typ $(k_{1},\dotsc, k_{l})$
   in $\Sym(n)$ die Länge:
@@ -4981,7 +4983,7 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
   \begin{proof}
     Jedes weitere Repräsentantensystem für $G/H$ hat die Form
     \begin{gather*}
-      R'=\{rh_{r}\colon r\in R\}
+      R'=\Set{rh_{r} |  r\in R}
     \end{gather*}
     Für $g\in G, r\in R$ ist $grh_{r}= \rho_{g}(r)\eta_{g}(r)h_{r}=
     \underbrace{\rho_{g}(r)h_{\rho_{g}(r)}}_{=\colon\rho_{g}'(r)\in R'}
@@ -5433,11 +5435,11 @@ Sei also $H\ntrianglelefteq G$. Für $x,y\in G$ gilt:
   xH=yH\Rightarrow Hx^{-1}=(xH)^{-1}=(yH)^{-1}= Hy^{-1}\Rightarrow xHx^{-1}=
      yHx^{-1}= yHy^{-1}
 \end{gather*}
-wobei $(xH)^{-1}\coloneq\{a^{-1}\colon a\in xH\}$ die Menge der Inversen von
+wobei $(xH)^{-1}\coloneq\Set{a^{-1} |  a\in xH}$ die Menge der Inversen von
 $xH$ sei (nicht etwa das Inverse von $xH$ in der nicht vorhandenen
 Faktorgruppe $G/H$). Diese Rechnung zeigt:
 \begin{gather*}
-  \abs{\{gHg^{-1}\colon g\in G\}}\leq\abs{G\colon H}
+  \abs{\Set{gHg^{-1} |  g\in G}}\leq\abs{G\colon H}
 \end{gather*}
 Sei nun $g\in G$ mit $H\neq gHg^{-1}$ (Erinnerung: $H\ntrianglelefteq G$).
 Dann ist $1\in H\cap gHg^{-1}$. Insbesondere sind $H$ und $gHg^{-1}$ nicht
@@ -5779,7 +5781,7 @@ Seien $G$ eine endliche Gruppe und $\alpha\in\Aut(G)$ mit $\{x\in
 G\colon\alpha(x)=x\}= \{1\}$. (Automorphismen mit dieser Eigenschaft heißen
 \highl{fixpunktfrei}\index{Automorphismus!fixpunktfreier}.) Zeigen Sie:
 \begin{enumerate}
- \item $G=\{\alpha(x)x^{-1}\colon x\in G\}$
+ \item $G=\Set{\alpha(x)x^{-1} |  x\in G}$
  \item Ist $\alpha^{2}=\id_{G}$, so ist $G$ abelsch von ungerader Ordnung.
 \end{enumerate}
 
